force-app/main/default/objects/ECT_Certificate_Review__c/ECT_Certificate_Review__c.object-meta.xml
<CustomObject>
    <label>Certificate Review</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Certificate Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>