force-app/main/default/objects/ECT_Certificate_Review__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To:</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.ECT_User_Type__c</field>
            <operation>equals</operation>
            <value>NARA Super User, NARA OFR Legal, NARA Social Media</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>