force-app/main/default/objects/ECT_Certificate_Review__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <formula>Assigned_To__r.FirstName &amp;&quot; &quot;&amp; Assigned_To__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To: Name</label>
    <type>Text</type>
</CustomField>