force-app/main/default/objects/ECT_Certificate_Review__c/fields/Certificate_Review_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Review_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate Review Checklist</label>
    <referenceTo>ECT_Certificate_Review_Checklist__c</referenceTo>
    <relationshipLabel>Certificate Reviews</relationshipLabel>
    <relationshipName>Certificate_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>