force-app/main/default/objects/ECT_Certificate_Review__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <label>Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Ascertainment</fullName>
            </value>
            <value>
                <fullName>Certificate of Vote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>