force-app/main/default/objects/ECT_Certificate_Review__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Reviewed</label>
    <type>Date</type>
</CustomField>