force-app/main/default/objects/ECT_Certificate_Review__c/fields/Date_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Date_Scanned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Scanned</label>
    <type>Date</type>
</CustomField>