force-app/main/default/objects/ECT_Certificate_Review__c/fields/Date_Website_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Website_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Website Updated</label>
    <type>Date</type>
</CustomField>