force-app/main/default/objects/ECT_Certificate_Review__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <formula>State__r.Facebook__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook</label>
    <type>Text</type>
</CustomField>