force-app/main/default/objects/ECT_Certificate_Review__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <formula>State__r.Instagram__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instagram</label>
    <type>Text</type>
</CustomField>