force-app/main/default/objects/ECT_Certificate_Review__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <formula>State__r.LinkedIn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>