force-app/main/default/objects/ECT_Certificate_Review__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Received By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>