force-app/main/default/objects/ECT_Certificate_Review__c/fields/Received_Date_POC_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Received_Date_POC_Contacted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Date POC Contacted</label>
    <type>Date</type>
</CustomField>