force-app/main/default/objects/ECT_Certificate_Review__c/fields/Received_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Resolution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Resolution Date</label>
    <type>Date</type>
</CustomField>