force-app/main/default/objects/ECT_Certificate_Review__c/fields/Review_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Resolution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Resolution Date</label>
    <type>Date</type>
</CustomField>