force-app/main/default/objects/ECT_Certificate_Review__c/fields/S508_Date_POC_Contacted__c.field-meta.xml
<CustomField>
    <fullName>S508_Date_POC_Contacted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>508 Date POC Contacted</label>
    <type>Date</type>
</CustomField>