force-app/main/default/objects/ECT_Certificate_Review__c/fields/S508_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>S508_Resolution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>508 Resolution Date</label>
    <type>Date</type>
</CustomField>