force-app/main/default/objects/ECT_Certificate_Review__c/fields/S508_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>S508_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>508 Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Reviews4</relationshipName>
    <type>Lookup</type>
</CustomField>