force-app/main/default/objects/ECT_Certificate_Review__c/fields/Scan_Date_POC_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date_POC_Contacted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scan Date POC Contacted</label>
    <type>Date</type>
</CustomField>