force-app/main/default/objects/ECT_Certificate_Review__c/fields/Scan_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Scan_Resolution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scan Resolution Date</label>
    <type>Date</type>
</CustomField>