force-app/main/default/objects/ECT_Certificate_Review__c/fields/Scanned_By__c.field-meta.xml
<CustomField>
    <fullName>Scanned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scanned By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Reviews3</relationshipName>
    <type>Lookup</type>
</CustomField>