force-app/main/default/objects/ECT_Certificate_Review__c/fields/SM_Comments__c.field-meta.xml
<CustomField>
    <fullName>SM_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Media Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>