force-app/main/default/objects/ECT_Certificate_Review__c/fields/SM_Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>SM_Date_Posted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Posted to Social Media</label>
    <type>Date</type>
</CustomField>