force-app/main/default/objects/ECT_Certificate_Review__c/fields/Social_Media_Link__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Media Link</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>