force-app/main/default/objects/ECT_Certificate_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Scanning</fullName>
            </value>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>508</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>