force-app/main/default/objects/ECT_Certificate_Review__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <formula>State__r.Twitter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter</label>
    <type>Text</type>
</CustomField>