force-app/main/default/objects/ECT_Certificate_Review__c/fields/Verifier__c.field-meta.xml
<CustomField>
    <fullName>Verifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Reviews5</relationshipName>
    <type>Lookup</type>
</CustomField>