force-app/main/default/objects/ECT_Certificate_Review__c/fields/WU_Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>WU_Date_Posted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Posted to Website</label>
    <type>Date</type>
</CustomField>