force-app/main/default/objects/ECT_Certificate_Review__c/fields/WU_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>WU_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Website Update Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificate_Reviews6</relationshipName>
    <type>Lookup</type>
</CustomField>