force-app/main/default/objects/ECT_Certificate_Review__c/validationRules/Not_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c ,&quot;Completed&quot;), ISBLANK( SM_Date_Posted__c ) )</errorConditionFormula>
    <errorMessage>Certificate review not completed until Date Posted to Social Media</errorMessage>
</ValidationRule>