force-app/main/default/objects/ECT_Certificate_Review__c/validationRules/Social_Media_Assign_to_Social_Media_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Media_Assign_to_Social_Media_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Status__c , &quot;Social Media&quot;)), ISPICKVAL( Assigned_To__r.ECT_User_Type__c , &quot;NARA Social Media&quot;))</errorConditionFormula>
    <errorMessage>If stage is not Social Media,  you can&apos;t assign to a Social Media User</errorMessage>
</ValidationRule>