force-app/main/default/objects/ECT_Certificate_Review__c/validationRules/Social_Media_not_ready_to_assign.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Media_not_ready_to_assign</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Social Media&quot;), NOT(ISPICKVAL( Assigned_To__r.ECT_User_Type__c , &quot;NARA Social Media&quot;)) )</errorConditionFormula>
    <errorMessage>If stage is Social Media, assign to a Social Media User</errorMessage>
</ValidationRule>