force-app/main/default/objects/ECT_Certificate_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>State__c</columns>
    <columns>NAME</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>