force-app/main/default/objects/ECT_Certificate_Review__c/listViews/Certificate_Has_Not_Been_Posted.listView-meta.xml
<ListView>
    <fullName>Certificate_Has_Not_Been_Posted</fullName>
    <columns>NAME</columns>
    <columns>State_Name__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Date_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Social Media,Completed</value>
    </filters>
    <label>Certificate Has Not Been Posted</label>
    <sharedTo>
        <group>ECT_NARA_Super_Users</group>
        <group>ECT_OFR_Legal_Users</group>
    </sharedTo>
</ListView>