force-app/main/default/objects/ECT_Certificate_Review__c/listViews/Certificate_Posted_to_Website.listView-meta.xml
<ListView>
    <fullName>Certificate_Posted_to_Website</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Date_Received__c</columns>
    <columns>WU_Date_Posted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WU_Date_Posted__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Certificate Posted to Website</label>
    <sharedTo>
        <group>ECT_Congress_Users</group>
        <group>ECT_NARA_Supervisory_Users</group>
    </sharedTo>
</ListView>