force-app/main/default/objects/ECT_Certificate_Review__c/listViews/State_Certificates_Ascertainment.listView-meta.xml
<ListView>
    <fullName>State_Certificates_Ascertainment</fullName>
    <columns>State_Name__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>NAME</columns>
    <columns>Certificate_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Review_Comments__c</columns>
    <columns>SM_Comments__c</columns>
    <columns>SM_Date_Posted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Certificate_Type__c</field>
        <operation>equals</operation>
        <value>Certificate of Ascertainment</value>
    </filters>
    <label>State Certificates (Ascertainment)</label>
</ListView>